argocd-tekton/nginx-from-git/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  namespace: ocp-demo
spec:
  serviceAccountName: demo-nube
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: registry.redhat.io/ubi9/httpd-24:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
          volumeMounts:
            - name: pvc-git-demo
              mountPath: /var/www/html/
      volumes:
        - name: apache-content
          emptyDir: {}
        - name: pvc-git-demo
          persistentVolumeClaim:
            claimName: pvc-git-demo
 
---
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: ocp-demo
spec:
  selector:
    app: apache
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-route
  namespace: ocp-demo
spec:
  host: gorpt.cfeteit.mx
  path: /
  to:
    kind: Service
    name: demo-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIE7zCCA9egAwIBAgISBIjGJpuXQHI3VwC7rjazosaHMA0GCSqGSIb3DQEBCwUA
[...]
      8P/L5Ns1iD25uT0OGGOgC6qj5g==
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQDNDiBwp08wvhZz
[...]
      w3txsQqFqgg+xpseADcWEI0J
      -----END PRIVATE KEY-----
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIFBTCCAu2gAwIBAgIQS6hSk/eaL6JzBkuoBI110DANBgkqhkiG9w0BAQsFADBP
[...]
      KPpdzvvtTnOPlC7SQZSYmdunr3Bf9b77AiC/ZidstK36dRILKz7OA54=
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
